--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,6 @@
     	    "name": "worker-name",
 	    "compatibility_date": "2025-04-18",
 	    "assets": {
-    	      "directory": "./dist"
+    	      "directory": "./website"
 	    }
 	  }
